fix the fix for the dark mode button lol

--- a/final/style/darkmode.css
+++ b/final/style/darkmode.css
@@ -10,6 +10,6 @@
     text-decoration: none;
     height: 30px;
     position: absolute;
-    left:8%;
-    top:13%
+    left: 80px;
+    top:90px;
 }
